--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -5,7 +5,7 @@
 <li><a href="../it/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--med" title="Manuale:Modellazione per la progettazione del prodotto (27% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Modelowanie dla projektowania produktu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Modeling for product design (13% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1052;&#1086;&#1076;&#1077;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; &#1076;&#1083;&#1103; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1103; &#1087;&#1088;&#1086;&#1076;&#1091;&#1082;&#1090;&#1072; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#25163;&#20876;&#65306;&#20026;&#20135;&#21697;&#35774;&#35745;&#24314;&#27169; (13% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#35069;&#21697;&#35373;&#35336;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12522;&#12531;&#12464; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -66,10 +66,8 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> in FreeCAD is a versatile tool for creating parametric 3D models, particularly useful for solid body designs. It allows you to start with 2D sketches, which can then be transformed into 3D objects using operations like <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">padding</a>, <span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">revolving</a>, and <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">pocketing</a>. This workbench is essential for designing parts that require precision and parametric control, as changes to sketches or features automatically update the entire model.
+<p><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; prost&#345;ed&iacute; PartDesign</a> v programu FreeCAD je univerz&aacute;ln&iacute; n&aacute;stroj pro vytv&aacute;&#345;en&iacute; parametrick&yacute;ch 3D model&#367;, kter&yacute; je obzvl&aacute;&scaron;t&#283; u&#382;ite&#269;n&yacute; pro n&aacute;vrhy pevn&yacute;ch t&#283;les. Umo&#382;&#328;uje v&aacute;m za&#269;&iacute;t s 2D n&aacute;&#269;rtky, kter&eacute; lze pot&eacute; transformovat na 3D objekty pomoc&iacute; operac&iacute;, jako je <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>, <span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Ot&aacute;&#269;ka</a> a <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>. Tato pracovn&iacute; plocha je nezbytn&aacute; pro navrhov&aacute;n&iacute; d&iacute;l&#367;, kter&eacute; vy&#382;aduj&iacute; p&#345;esnost a parametrickou kontrolu, proto&#382;e zm&#283;ny v n&aacute;&#269;rtc&iacute;ch nebo prvc&iacute;ch automaticky aktualizuj&iacute; cel&yacute; model.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>One of the key advantages of the PartDesign Workbench is its suitability for creating parts for 3D printing. Since 3D printers require solid, watertight models, the PartDesign Workbench ensures that all features remain within a single coherent body. This eliminates common issues like gaps or overlapping faces, which can cause problems during slicing for 3D printing. Once your design is complete, you can easily export the model as an STL file&mdash;a format widely supported by 3D printers. This makes the PartDesign Workbench a go-to option for creating high-quality, printable objects, whether you're prototyping, designing functional parts, or creating intricate models for 3D printing.
 </p>
@@ -228,13 +226,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112093129
+Cached time: 20260112093748
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.125 seconds
-Real time usage: 0.176 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.147 seconds
+Real time usage: 0.212 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -244,13 +242,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.486      1 -total
- 70.65%    8.822      1 Template:Manual:TOC
- 48.60%    6.068      1 Manual:Summary/cs
- 25.17%    3.142      2 Template:Docnav
+100.00%   10.570      1 -total
+ 71.98%    7.608      1 Template:Manual:TOC
+ 55.08%    5.822      1 Manual:Summary/cs
+ 23.58%    2.492      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093129 and revision id 1737357. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093747 and revision id 1737359. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
