--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -68,12 +68,8 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; prost&#345;ed&iacute; PartDesign</a> v programu FreeCAD je univerz&aacute;ln&iacute; n&aacute;stroj pro vytv&aacute;&#345;en&iacute; parametrick&yacute;ch 3D model&#367;, kter&yacute; je obzvl&aacute;&scaron;t&#283; u&#382;ite&#269;n&yacute; pro n&aacute;vrhy pevn&yacute;ch t&#283;les. Umo&#382;&#328;uje v&aacute;m za&#269;&iacute;t s 2D n&aacute;&#269;rtky, kter&eacute; lze pot&eacute; transformovat na 3D objekty pomoc&iacute; operac&iacute;, jako je <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>, <span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Ot&aacute;&#269;ka</a> a <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>. Tato pracovn&iacute; plocha je nezbytn&aacute; pro navrhov&aacute;n&iacute; d&iacute;l&#367;, kter&eacute; vy&#382;aduj&iacute; p&#345;esnost a parametrickou kontrolu, proto&#382;e zm&#283;ny v n&aacute;&#269;rtc&iacute;ch nebo prvc&iacute;ch automaticky aktualizuj&iacute; cel&yacute; model.
 </p><p>Jednou z kl&iacute;&#269;ov&yacute;ch v&yacute;hod pracovn&iacute;ho prost&#345;ed&iacute; PartDesign je jeho vhodnost pro vytv&aacute;&#345;en&iacute; d&iacute;l&#367; pro 3D tisk. Vzhledem k tomu, &#382;e 3D tisk&aacute;rny vy&#382;aduj&iacute; pevn&eacute;, vodot&#283;sn&eacute; modely, PartDesign Workbench zaji&scaron;&#357;uje, &#382;e v&scaron;echny prvky z&#367;stanou v r&aacute;mci jednoho souvisl&eacute;ho t&#283;lesa. T&iacute;m se eliminuj&iacute; b&#283;&#382;n&eacute; probl&eacute;my, jako jsou mezery nebo p&#345;ekr&yacute;vaj&iacute;c&iacute; se plochy, kter&eacute; mohou zp&#367;sobit pot&iacute;&#382;e p&#345;i slicov&aacute;n&iacute;pro 3D tisk. Jakmile je v&aacute;&scaron; n&aacute;vrh hotov&yacute;, m&#367;&#382;ete model snadno exportovat jako soubor STL &ndash; form&aacute;t &scaron;iroce podporovan&yacute; 3D tisk&aacute;rnami. D&iacute;ky tomu je PartDesign Workbench ide&aacute;ln&iacute; volbou pro vytv&aacute;&#345;en&iacute; vysoce kvalitn&iacute;ch tisknuteln&yacute;ch objekt&#367;, a&#357; u&#382; se jedn&aacute; o prototypy, n&aacute;vrh funk&#269;n&iacute;ch d&iacute;l&#367; nebo vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch model&#367; pro 3D tisk.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To illustrate how the PartDesign Workbench works, let's model this well-known piece of <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Lego">Lego</a>. You can also refer to <a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Basic Part Design Tutorial 019</a> if you wish to try a different object.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_RedBrick.png&amp;filetimestamp=20240928110145&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_RedBrick.png" decoding="async" width="668" height="472" class="mw-file-element" data-file-width="668" data-file-height="472"></a></span>
+</p><p>Abychom ilustrovali, jak funguje pracovn&iacute; prost&#345;ed&iacute; PartDesign, namodelujeme tento zn&aacute;m&yacute; d&iacute;l <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Lego">Lega</a>. Pokud chcete vyzkou&scaron;et jin&yacute; objekt, m&#367;&#382;ete se tak&eacute; pod&iacute;vat na <a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Z&aacute;kladn&iacute; n&aacute;vrh sou&#269;&aacute;sti &ndash; v&yacute;ukov&yacute; program 019</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_RedBrick.png&amp;filetimestamp=20240928110145&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_RedBrick.png" decoding="async" width="668" height="472" class="mw-file-element" data-file-width="668" data-file-height="472"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>We will now use exclusively the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> and <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> tools. Since all the tools from the Sketcher Workbench are also included in the Part Design Workbench, we can stay in Part Design and we will not need to switch back and forth between the two.
@@ -223,13 +219,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112093816
+Cached time: 20260112094016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.151 seconds
-Real time usage: 0.205 seconds
-Preprocessor visited node count: 96/1000000
+CPU time usage: 0.132 seconds
+Real time usage: 0.183 seconds
+Preprocessor visited node count: 95/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -239,13 +235,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.389      1 -total
- 70.58%    8.038      1 Template:Manual:TOC
- 52.19%    5.944      1 Manual:Summary/cs
- 25.68%    2.925      2 Template:Docnav
+100.00%    9.766      1 -total
+ 74.56%    7.282      1 Template:Manual:TOC
+ 54.67%    5.339      1 Manual:Summary/cs
+ 21.77%    2.126      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093815 and revision id 1737361. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094016 and revision id 1737363. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
