--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -70,11 +70,8 @@
 </p><p>Jednou z kl&iacute;&#269;ov&yacute;ch v&yacute;hod pracovn&iacute;ho prost&#345;ed&iacute; PartDesign je jeho vhodnost pro vytv&aacute;&#345;en&iacute; d&iacute;l&#367; pro 3D tisk. Vzhledem k tomu, &#382;e 3D tisk&aacute;rny vy&#382;aduj&iacute; pevn&eacute;, vodot&#283;sn&eacute; modely, PartDesign Workbench zaji&scaron;&#357;uje, &#382;e v&scaron;echny prvky z&#367;stanou v r&aacute;mci jednoho souvisl&eacute;ho t&#283;lesa. T&iacute;m se eliminuj&iacute; b&#283;&#382;n&eacute; probl&eacute;my, jako jsou mezery nebo p&#345;ekr&yacute;vaj&iacute;c&iacute; se plochy, kter&eacute; mohou zp&#367;sobit pot&iacute;&#382;e p&#345;i slicov&aacute;n&iacute;pro 3D tisk. Jakmile je v&aacute;&scaron; n&aacute;vrh hotov&yacute;, m&#367;&#382;ete model snadno exportovat jako soubor STL &ndash; form&aacute;t &scaron;iroce podporovan&yacute; 3D tisk&aacute;rnami. D&iacute;ky tomu je PartDesign Workbench ide&aacute;ln&iacute; volbou pro vytv&aacute;&#345;en&iacute; vysoce kvalitn&iacute;ch tisknuteln&yacute;ch objekt&#367;, a&#357; u&#382; se jedn&aacute; o prototypy, n&aacute;vrh funk&#269;n&iacute;ch d&iacute;l&#367; nebo vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch model&#367; pro 3D tisk.
 </p><p>Abychom ilustrovali, jak funguje pracovn&iacute; prost&#345;ed&iacute; PartDesign, namodelujeme tento zn&aacute;m&yacute; d&iacute;l <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Lego">Lega</a>. Pokud chcete vyzkou&scaron;et jin&yacute; objekt, m&#367;&#382;ete se tak&eacute; pod&iacute;vat na <a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Z&aacute;kladn&iacute; n&aacute;vrh sou&#269;&aacute;sti &ndash; v&yacute;ukov&yacute; program 019</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_RedBrick.png&amp;filetimestamp=20240928110145&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_RedBrick.png" decoding="async" width="668" height="472" class="mw-file-element" data-file-width="668" data-file-height="472"></a></span>
+</p><p>Nyn&iacute; budeme pou&#382;&iacute;vat v&yacute;hradn&#283; n&aacute;stroje <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> a <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>. Jeliko&#382; v&scaron;echny n&aacute;stroje z pracovn&iacute;ho prost&#345;ed&iacute; Sketcher jsou tak&eacute; sou&#269;&aacute;st&iacute; pracovn&iacute;ho prost&#345;ed&iacute; Part Design, m&#367;&#382;eme z&#367;stat v Part Design a nebudeme muset p&#345;ep&iacute;nat mezi t&#283;mito dv&#283;ma prost&#345;ed&iacute;mi.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>We will now use exclusively the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> and <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> tools. Since all the tools from the Sketcher Workbench are also included in the Part Design Workbench, we can stay in Part Design and we will not need to switch back and forth between the two.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>In FreeCAD's PartDesign Workbench, objects are primarily built from Sketches, which are 2D profiles made up of linear segments such as lines, arcs, or ellipses, along with a series of constraints. These constraints dictate specific geometric rules for the sketch and can be applied to both the segments themselves and their key points, like endpoints or center points. For example, you can use a vertical constraint on a line to keep it perfectly vertical, or a position (lock) constraint to fix an endpoint in place, preventing it from moving.
 </p>
@@ -219,13 +216,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112094016
+Cached time: 20260112094144
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.132 seconds
-Real time usage: 0.183 seconds
-Preprocessor visited node count: 95/1000000
+CPU time usage: 0.106 seconds
+Real time usage: 0.172 seconds
+Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -235,13 +232,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.766      1 -total
- 74.56%    7.282      1 Template:Manual:TOC
- 54.67%    5.339      1 Manual:Summary/cs
- 21.77%    2.126      2 Template:Docnav
+100.00%   11.144      1 -total
+ 64.89%    7.231      1 Template:Manual:TOC
+ 46.37%    5.167      1 Manual:Summary/cs
+ 31.29%    3.487      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094016 and revision id 1737363. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094144 and revision id 1737365. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
