--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -72,11 +72,8 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_RedBrick.png&amp;filetimestamp=20240928110145&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_RedBrick.png" decoding="async" width="668" height="472" class="mw-file-element" data-file-width="668" data-file-height="472"></a></span>
 </p><p>Nyn&iacute; budeme pou&#382;&iacute;vat v&yacute;hradn&#283; n&aacute;stroje <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> a <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>. Jeliko&#382; v&scaron;echny n&aacute;stroje z pracovn&iacute;ho prost&#345;ed&iacute; Sketcher jsou tak&eacute; sou&#269;&aacute;st&iacute; pracovn&iacute;ho prost&#345;ed&iacute; Part Design, m&#367;&#382;eme z&#367;stat v Part Design a nebudeme muset p&#345;ep&iacute;nat mezi t&#283;mito dv&#283;ma prost&#345;ed&iacute;mi.
 </p><p>V pracovn&iacute;m prost&#345;ed&iacute; PartDesign programu FreeCAD se objekty vytv&aacute;&#345;ej&iacute; p&#345;edev&scaron;&iacute;m ze skic, co&#382; jsou 2D profily slo&#382;en&eacute; z line&aacute;rn&iacute;ch segment&#367;, jako jsou p&#345;&iacute;mky, oblouky nebo elipsy, spolu s &#345;adou omezen&iacute;. Tato omezen&iacute; ur&#269;uj&iacute; konkr&eacute;tn&iacute; geometrick&aacute; pravidla pro skicu a lze je aplikovat jak na samotn&eacute; segmenty, tak na jejich kl&iacute;&#269;ov&eacute; body, jako jsou koncov&eacute; body nebo st&#345;edov&eacute; body. Nap&#345;&iacute;klad m&#367;&#382;ete pou&#382;&iacute;t vertik&aacute;ln&iacute; omezen&iacute; na p&#345;&iacute;mku, aby z&#367;stala dokonale vertik&aacute;ln&iacute;, nebo omezen&iacute; polohy (zamknut&iacute;), aby se koncov&yacute; bod neh&yacute;bal.
+</p><p>N&aacute;&#269;rt je pova&#382;ov&aacute;n za pln&#283; omezen&yacute;, kdy&#382; je ka&#382;d&yacute; bod uzam&#269;en v poloze p&#345;&iacute;slu&scaron;n&yacute;m po&#269;tem omezen&iacute;, co&#382; znamen&aacute;, &#382;e &#382;&aacute;dn&aacute; &#269;&aacute;st n&aacute;&#269;rtu nem&#367;&#382;e b&yacute;t voln&#283; posunuta. Dosa&#382;en&iacute; pln&#283; omezen&eacute;ho n&aacute;&#269;rtu je ide&aacute;ln&iacute;, proto&#382;e zaji&scaron;&#357;uje, &#382;e n&aacute;vrh je dob&#345;e definovan&yacute; a stabiln&iacute;, co&#382; umo&#382;&#328;uje p&#345;edv&iacute;dateln&eacute; zm&#283;ny v pozd&#283;j&scaron;&iacute; f&aacute;zi procesu n&aacute;vrhu. Na druhou stranu, pokud je p&#345;id&aacute;no v&iacute;ce omezen&iacute;, ne&#382; je nutn&eacute; &ndash; co&#382; se ozna&#269;uje jako nadm&#283;rn&#283; omezen&yacute; n&aacute;&#269;rt &ndash; m&#367;&#382;e to zp&#367;sobit konflikty v geometrii. FreeCAD v&aacute;s upozorn&iacute; na jak&aacute;koli nadbyte&#269;n&aacute; nebo konfliktn&iacute; omezen&iacute;, proto&#382;e nadm&#283;rn&eacute; omezen&iacute; m&#367;&#382;e zp&#367;sobit probl&eacute;my v dal&scaron;&iacute;ch operac&iacute;ch, jako jsou extruze nebo &#345;ezy.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>A sketch is considered fully constrained when every point is locked into position by the appropriate number of constraints, meaning no part of the sketch can be moved freely. Achieving a fully constrained sketch is ideal because it ensures the design is well-defined and stable, allowing for predictable changes later in the design process. On the other hand, if more constraints are added than necessary&mdash;referred to as an over-constrained sketch&mdash;this can cause conflicts in the geometry. FreeCAD will alert you to any redundant or conflicting constraints, as over-constraining can cause issues in further operations like extrusions or cuts.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Adding the right constraints is key to creating a stable, parametric model. By carefully balancing constraints, you can easily modify or adjust sketches without breaking the geometry. This control makes the Part Design Workbench a powerful tool for precise, parametric modeling, especially for tasks like 3D printing, where maintaining proper geometric relationships is crucial to producing accurate, functional parts.
 </p>
@@ -213,13 +210,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112094227
+Cached time: 20260112094257
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.141 seconds
-Real time usage: 0.207 seconds
-Preprocessor visited node count: 93/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 92/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -229,13 +226,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.346      1 -total
- 74.75%    7.733      1 Template:Manual:TOC
- 53.84%    5.570      1 Manual:Summary/cs
- 20.64%    2.135      2 Template:Docnav
+100.00%    6.847      1 -total
+ 67.59%    4.628      1 Template:Manual:TOC
+ 50.12%    3.432      1 Manual:Summary/cs
+ 27.98%    1.916      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094226 and revision id 1737367. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094256 and revision id 1737369. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
