--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -74,11 +74,8 @@
 </p><p>V pracovn&iacute;m prost&#345;ed&iacute; PartDesign programu FreeCAD se objekty vytv&aacute;&#345;ej&iacute; p&#345;edev&scaron;&iacute;m ze skic, co&#382; jsou 2D profily slo&#382;en&eacute; z line&aacute;rn&iacute;ch segment&#367;, jako jsou p&#345;&iacute;mky, oblouky nebo elipsy, spolu s &#345;adou omezen&iacute;. Tato omezen&iacute; ur&#269;uj&iacute; konkr&eacute;tn&iacute; geometrick&aacute; pravidla pro skicu a lze je aplikovat jak na samotn&eacute; segmenty, tak na jejich kl&iacute;&#269;ov&eacute; body, jako jsou koncov&eacute; body nebo st&#345;edov&eacute; body. Nap&#345;&iacute;klad m&#367;&#382;ete pou&#382;&iacute;t vertik&aacute;ln&iacute; omezen&iacute; na p&#345;&iacute;mku, aby z&#367;stala dokonale vertik&aacute;ln&iacute;, nebo omezen&iacute; polohy (zamknut&iacute;), aby se koncov&yacute; bod neh&yacute;bal.
 </p><p>N&aacute;&#269;rt je pova&#382;ov&aacute;n za pln&#283; omezen&yacute;, kdy&#382; je ka&#382;d&yacute; bod uzam&#269;en v poloze p&#345;&iacute;slu&scaron;n&yacute;m po&#269;tem omezen&iacute;, co&#382; znamen&aacute;, &#382;e &#382;&aacute;dn&aacute; &#269;&aacute;st n&aacute;&#269;rtu nem&#367;&#382;e b&yacute;t voln&#283; posunuta. Dosa&#382;en&iacute; pln&#283; omezen&eacute;ho n&aacute;&#269;rtu je ide&aacute;ln&iacute;, proto&#382;e zaji&scaron;&#357;uje, &#382;e n&aacute;vrh je dob&#345;e definovan&yacute; a stabiln&iacute;, co&#382; umo&#382;&#328;uje p&#345;edv&iacute;dateln&eacute; zm&#283;ny v pozd&#283;j&scaron;&iacute; f&aacute;zi procesu n&aacute;vrhu. Na druhou stranu, pokud je p&#345;id&aacute;no v&iacute;ce omezen&iacute;, ne&#382; je nutn&eacute; &ndash; co&#382; se ozna&#269;uje jako nadm&#283;rn&#283; omezen&yacute; n&aacute;&#269;rt &ndash; m&#367;&#382;e to zp&#367;sobit konflikty v geometrii. FreeCAD v&aacute;s upozorn&iacute; na jak&aacute;koli nadbyte&#269;n&aacute; nebo konfliktn&iacute; omezen&iacute;, proto&#382;e nadm&#283;rn&eacute; omezen&iacute; m&#367;&#382;e zp&#367;sobit probl&eacute;my v dal&scaron;&iacute;ch operac&iacute;ch, jako jsou extruze nebo &#345;ezy.
 </p><p>P&#345;id&aacute;n&iacute; spr&aacute;vn&yacute;ch vazeb je kl&iacute;&#269;em k vytvo&#345;en&iacute; stabiln&iacute;ho parametrick&eacute;ho modelu. Pe&#269;liv&yacute;m vyv&aacute;&#382;en&iacute;m omezen&iacute; m&#367;&#382;ete snadno upravovat nebo p&#345;izp&#367;sobovat n&aacute;&#269;rtky, ani&#382; byste naru&scaron;ili geometrii. D&iacute;ky t&eacute;to kontrole je Part Design Workbench v&yacute;konn&yacute;m n&aacute;strojem pro p&#345;esn&eacute; parametrick&eacute; modelov&aacute;n&iacute;, zejm&eacute;na pro &uacute;koly jako 3D tisk, kde je pro v&yacute;robu p&#345;esn&yacute;ch a funk&#269;n&iacute;ch d&iacute;l&#367; z&aacute;sadn&iacute; zachov&aacute;n&iacute; spr&aacute;vn&yacute;ch geometrick&yacute;ch vztah&#367;.
+</p><p>N&aacute;&#269;rtky maj&iacute; re&#382;im &uacute;prav, ve kter&eacute;m lze m&#283;nit jejich geometrii a omezen&iacute;. Po dokon&#269;en&iacute; &uacute;prav a opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav se n&aacute;&#269;rtky chovaj&iacute; jako jak&yacute;koli jin&yacute; objekt FreeCADu a lze je pou&#382;&iacute;t jako stavebn&iacute; bloky pro v&scaron;echny n&aacute;stroje Part Design, ale tak&eacute; v jin&yacute;ch pracovn&iacute;ch prostorech, jako jsou <a href="../Part_Workbench.html" title="Part Workbench">Part</a> nebo <a href="../Arch_Workbench.html" title="Arch Workbench">Arch</a>. <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> tak&eacute; obsahuje n&aacute;stroj, kter&yacute; p&#345;ev&aacute;d&iacute; objekty Draft na n&aacute;&#269;rtky a naopak.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Sketches have an edit mode, where their geometry and constraints can be changed. When you are done with editing, and leave edit mode, sketches behave like any other FreeCAD object, and can be used as building blocks for all the Part Design tools, but also in other workbenches, such as <a href="../Part_Workbench.html" title="Part Workbench">Part</a> or <a href="../Arch_Workbench.html" title="Arch Workbench">Arch</a>. The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft workbench</a> also has a tool that converts Draft objects to Sketches, and vice-versa.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>Switch to the <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a>.</li>
 <li>Click on the <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a> button and choose the <b>XY</b> plane, which is the "ground" plane. The sketch will be created and will immediately be switched to edit mode, and the view will be rotated to look at your sketch orthogonally.</li>
@@ -207,13 +204,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112094331
+Cached time: 20260112094521
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.126 seconds
-Real time usage: 0.198 seconds
-Preprocessor visited node count: 91/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.197 seconds
+Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -223,13 +220,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.270      1 -total
- 69.32%    7.812      1 Template:Manual:TOC
- 51.78%    5.836      1 Manual:Summary/cs
- 27.36%    3.084      2 Template:Docnav
+100.00%    9.013      1 -total
+ 69.22%    6.239      1 Template:Manual:TOC
+ 54.24%    4.889      1 Manual:Summary/cs
+ 26.45%    2.384      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094331 and revision id 1737371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112094521 and revision id 1737373. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
