--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -90,10 +90,8 @@
 <li>Nyn&iacute; si v&scaron;imnete, &#382;e n&aacute;&scaron; obd&eacute;ln&iacute;k zezelenal, co&#382; znamen&aacute;, &#382;e je pln&#283; zavazben&yacute;. To znamen&aacute;, &#382;e v&scaron;echny aspekty n&aacute;&#269;rtu, v&#269;etn&#283; jeho polohy, velikosti a tvaru, jsou nyn&iacute; pln&#283; definov&aacute;ny a uzam&#269;eny na sv&eacute;m m&iacute;st&#283;. Obecn&#283; je dobr&eacute; zajistit, aby n&aacute;&#269;rtky byly pln&#283; zavazben&yacute;, proto&#382;e to pom&aacute;h&aacute; udr&#382;et kontrolu nad n&aacute;vrhem a zabra&#328;uje necht&#283;n&yacute;m zm&#283;n&aacute;m b&#283;hem dal&scaron;&iacute;ch operac&iacute;.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_re.png&amp;filetimestamp=20240928085315&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_re.png" decoding="async" width="603" height="452" class="mw-file-element" data-file-width="603" data-file-height="452"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Our base sketch is now ready, we can leave edit mode by pressing the <b>Close</b> button on top of its task panel, or simply by pressing the <b>Escape</b> key. If needed later on, we can reenter edit mode anytime by double-clicking the sketch in the tree view, or by right-clicking and pressing on the edit sketch option.</li>
-<li>Let's extrude it by using the <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a> tool, and giving it a distance of 14.4 mm. The other options can be left at their default values:</li></ul>
-</div>
+<ul><li>Na&scaron;e z&aacute;kladn&iacute; skica je nyn&iacute; hotov&aacute;, m&#367;&#382;eme opustit re&#382;im &uacute;prav stisknut&iacute;m tla&#269;&iacute;tka <b>Zav&#345;&iacute;t</b> v horn&iacute; &#269;&aacute;sti panelu &uacute;kol&#367; nebo jednodu&scaron;e stisknut&iacute;m kl&aacute;vesy <b>Escape</b>. Pokud to bude pozd&#283;ji pot&#345;eba, m&#367;&#382;eme kdykoli znovu vstoupit do re&#382;imu &uacute;prav dvojit&yacute;m kliknut&iacute;m na skicu ve stromov&eacute;m zobrazen&iacute; nebo kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i a stisknut&iacute;m mo&#382;nosti Upravit skicu.</li>
+<li>Extrudujme ho pomoc&iacute; n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a> a nastavme vzd&aacute;lenost 14,4 mm. Ostatn&iacute; mo&#382;nosti m&#367;&#382;eme nechat na v&yacute;choz&iacute;ch hodnot&aacute;ch:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_padding.png&amp;filetimestamp=20240928090402&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_padding.png" decoding="async" width="884" height="484" class="mw-file-element" data-file-width="884" data-file-height="484"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -200,13 +198,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112100520
+Cached time: 20260112100922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.118 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 88/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.147 seconds
+Preprocessor visited node count: 87/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -216,13 +214,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.390      1 -total
- 68.44%    7.111      1 Template:Manual:TOC
- 53.65%    5.574      1 Manual:Summary/cs
- 27.33%    2.839      2 Template:Docnav
+100.00%    7.570      1 -total
+ 73.47%    5.562      1 Template:Manual:TOC
+ 60.09%    4.549      1 Manual:Summary/cs
+ 22.75%    1.722      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112100520 and revision id 1737377. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112100922 and revision id 1737379. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
